@@ -115,9 +115,6 @@ public class OpenSearchTestBasePlugin implements Plugin<Project> {
                             test.jvmArgs("--illegal-access=warn");
                         }
                     }
-                    if (test.getJavaVersion().compareTo(JavaVersion.VERSION_17) > 0) {
-                        test.jvmArgs("-Djava.security.manager=allow");
-                    }
                 }
             });
             test.getJvmArgumentProviders().add(nonInputProperties);
@@ -162,6 +159,13 @@ public class OpenSearchTestBasePlugin implements Plugin<Project> {
                 nonInputProperties.systemProperty("tests.seed", BuildParams.getTestSeed());
             } else {
                 test.systemProperty("tests.seed", BuildParams.getTestSeed());
+            }
+
+            if (BuildParams.isInFipsJvm()) {
+                test.systemProperty(
+                    "java.security.properties",
+                    project.getRootProject().getLayout().getProjectDirectory() + "/distribution/src/config/fips_java.security"
+                );
             }
 
             // don't track these as inputs since they contain absolute paths and break cache relocatability
